--- a/conf/twaf_main.conf
+++ b/conf/twaf_main.conf
@@ -7,7 +7,7 @@ lua_shared_dict twaf_apisg_flow           5m;
 lua_shared_dict twaf_dpm                  5m;
 lua_shared_dict twaf_access_rule          2m;
 
-lua_package_path        "/opt/OpenWAF/?.lua;;";
+lua_package_path        "/opt/OpenWAF/?.lua;/opt/OpenWAF/lib/?.lua;;";
 lua_package_cpath       "/opt/OpenWAF/lib/resty/?.so;;";
 init_by_lua_file         /opt/OpenWAF/app/twaf_init.lua;
 init_worker_by_lua_file  /opt/OpenWAF/app/twaf_init_worker.lua;
